<resources>
    <string name="app_name" translatable="false">Dessert</string>
    <string name="title_activity_choose_login_registration" translatable="false">ChooseLoginRegistrationActivity</string>
    <string name="facebook_app_id">262691754922532</string>
    <string name="fb_login_protocol_scheme">fb262691754922532</string>
    <string name="make_an_order">Make an order</string>
    <string name="dialog_title">งานอดิเรก</string>
    <string name="ok">OK</string>
    <string name="dismiss_label">Cancel</string>
    <string name="clear_all_label">เคลียร์</string>
    <string name="txt_obtener_items">Obtener Items</string>
    <string name="bar_profile">Profile</string>
    <string name="bar_match">Match</string>
    <string name="bar_nearby">Nearby</string>
    <string name="bar_chat">Chat</string>
    <string name="showme">Show me</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Everyone">Everyone</string>
    <string name="Distance">Distance</string>
    <string name="km">km</string>
    <string name="age_range">Age</string>
    <string name="language">Language</string>
    <string name="Signout">Signout</string>
    <string name="Close_account">Close account</string>
    <string name="People_like_you">People like you</string>
    <string name="People_view">People view profile</string>
    <string name="Setting">Setting</string>
    <string name="Edit">Edit Profile</string>
    <string name="vip">Get VIP</string>
    <string name="tag_profile">Main Image</string>
    <string name="about_me">About me</string>
    <string name="Introduce_yourself">Introduce yourself</string>
    <string name="study_career">Education and work</string>
    <string name="work">Current Work</string>
    <string name="add">Add</string>
    <string name="school">school / University</string>
    <string name="basic_info">ฺBasic Information</string>
    <string name="name">Name</string>
    <string name="language_profile">Language</string>
    <string name="religion">Religion</string>
    <string name="Interests">Interests</string>
    <string name="see_people">See who viewed your profile</string>
    <string name="see_empty">No one has seen your profile yet</string>
    <string name="see_like">See who likes you</string>
    <string name="like_empty">No one likes you yet</string>
    <string name="today">Today </string>
    <string name="Male_semi">M</string>
    <string name="Female_semi">F</string>
    <string name="Male_gender">Male</string>
    <string name="Female_gender">Female</string>
    <string name="report_reset">Please wait for the reset at midnight</string>
    <string name="report_alert">Warning !!!</string>
    <string name="report_close">Close</string>
    <string name="report_fail">User report failed !!</string>
    <string name="report_failed">Failed</string>
    <string name="report_suc2">User reporting successful</string>
    <string name="report_suc">Successful</string>
    <string name="cancle">Cancel</string>
    <string name="dialog_report">Report</string>
    <string name="dialog_reportUser">Report user issues</string>
    <string name="report">Report user</string>
    <string name="online">Online</string>
    <string name="dont_now_online">Unknown online time</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="send_audio">You sent a voice message</string>
    <string name="receive_audio">sent you a voice message</string>
    <string name="send_picture">You sent a picture</string>
    <string name="receive_picture">sent you a picture</string>
    <string name="let_start_chat">Let! start your chat</string>
    <string name="kilometer">km</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="times">times</string>
    <string name="count_report">Count</string>
    <string name="text_hi">Say hi</string>
    <string name="yexy_message">Message</string>
    <string name="start_chat">Start chat</string>
    <string name="cancel_match">Cancel matching</string>
    <string name="cancel_match2">Cancel matching</string>
    <string name="cancel_match_confirm">Do you want to cancel the matching?</string>
    <string name="delete_message_all">Delete chat history</string>
    <string name="delete_message_all_confirm">คDo you want to delete all messages?</string>
    <string name="touch">touch to view profile</string>
    <string name="singin_google">Sign in with Google</string>
    <string name="signin_facebook">Sign in with Facebook</string>
    <string name="signin_phone">Sign in with Phone No</string>
    <string name="name_regis">Your name</string>
    <string name="name_regis_recommend">This is your name that will be shown to others</string>
    <string name="hint_name">Name</string>
    <string name="next_button">Next</string>
    <string name="your_gender">Your gender</string>
    <string name="your_age">Your birthday</string>
    <string name="note_gender">Note: You cannot change your gender after registration is complete.</string>
    <string name="note_age">Note: Users must be 18 years of age or older only.</string>
    <string name="profile_image">Profile picture</string>
    <string name="recommend_profile">Please upload your image. Must be a clear image and do not impersonate another person</string>
    <string name="loading">Loading...</string>
    <string name="note_phone">When you tap next, the app will send you a message with a verification code. If your phone number has already been verified The app will automatically login.</string>
    <string name="phone_hint">Phone No.</string>
    <string name="phine_no">Your phone number</string>
    <string name="otp">Your verification code</string>
    <string name="verification">The application has sent a verification code to</string>
    <string name="please">Please fill out below.</string>
    <string name="finish">Finish</string>
    <string name="registered">Registered</string>
    <string name="See_who_like">See who likes you</string>
    <string name="Searching">Searching</string>
    <string name="chatna_empty">No one greets you yet \n Wait a little longer</string>
    <string name="Chat_empty">When you match with other users \n Or when you accept the greeting \n Your match will appear here.</string>
    <string name="Application_settings">Application settings</string>
    <string name="Search_settings">Search settings</string>
    <string name="Notifications">Notifications</string>
    <string name="Active_status_settings">Active status settings</string>
    <string name="Active_status">Active status</string>
    <string name="Show_Active_status_recently">Show Active status recently</string>
    <string name="notify_match">Notify when swipe right then matching</string>
    <string name="Application_has_sent">Application has sent a confirmation code to</string>
    <string name="Like_you_too">Like you too</string>
    <string name="send_message">Send message</string>
    <string name="Matching_mode">Anyone can see you in Matching mode</string>
    <string name="list_mode">Anyone can see you in Nearby mode</string>
    <string name="See_other_user">See other user</string>
    <string name="Matched">Matched</string>
    <string name="new_matching">New match</string>
    <string name="you_and">You and</string>
    <string name="Matched2">Matched</string>
    <string name="You_have_a_new_match">You have a new match</string>
    <string name="New_message">New message</string>
    <string name="You_have_new_message">You have a new message</string>
    <string name="touch_settings">Touch to settings</string>
    <string name="Area">There are no other users in the area. You can increase the search range or expand the age range.</string>
    <string name="GPS_Disabled">GPS Disabled</string>
    <string name="GPS_open">Your GPS is off. Please turn on GPS to use the application.</string>
    <string name="open_gps">turn on GPS</string>
    <string name="enter_number">Please enter the number correctly.</string>
    <string name="Close_account_confirm">Do you want to permanently delete this account from the system?</string>
    <string name="Vision_closed">Vision closed</string>
    <string name="Vision_closed_match">If you turn off visibility in Matching mode Other users will not be able to see you.</string>
    <string name="Vision_closed_nearby">If you turn off visibility in Nearby mode Other users will not be able to see you.</string>
    <string name="try_again">Please try again later.</string>
    <string name="Visibility_settings">Visibility settings</string>
    <string name="Visibility">Visibility</string>
    <string name="Send_a_message_to">Send a message to him/she.</string>
    <string name="back">back</string>
    <string name="You_are_vip">You are VIP</string>
    <string name="primary_profile_alert">If you don\'t have a primary profile picture, other users won\'t be able to see you. Do you want to exit?</string>
    <string name="delete_image">Delete photo</string>
    <string name="delete_image_confirm">Do you want to delete the photo?</string>
    <string name="Sign">Sign in</string>
    <string name="logging">You are logging in automatically.</string>
    <string name="Noti">Alert</string>
    <string name="up18">For those aged 18 and above only</string>
    <string name="enter_name">Please enter your name</string>
    <string name="choose_gender">Please choose your gender</string>
    <string name="choose_photo">Please choose your profile picture.</string>
    <string name="off_status">Status not displayed</string>
    <string name="QA_improtant">How Important for you?</string>
    <string name="ok_QA">Confirm</string>
    <string name="next_QA">Next</string>
    <string name="previous_QA">Previous</string>
    <string name="QA_choice1">A little important</string>
    <string name="QA_choice2">Absolutely important</string>
    <string name="QA_choice3">Important</string>
    <string name="QA_choice4">Very Important</string>
    <string name="QA_choice5">Serious Important!</string>
    <string-array name="shopping_item">
        <item>จัดดอกไม้-ทำสวน</item>
        <item>ทำอาหาร</item>
        <item>เย็บปักถักร้อย</item>
        <item>เล่นกีฬา</item>
        <item>หัดแต่งหน้า-ทำผม</item>
        <item>ท่องเที่ยว</item>
        <item>ถ่ายรูป</item>
        <item>ทำบล๊อก-Vlog</item>
        <item>ดูภาพยนตร์-ซีรี่ส์</item>
        <item>อ่านหนังสือ</item>
        <item>ทำงานฝีมือ</item>
        <item>กิจกรรมอาสา</item>
        <item>ร้องเพลง</item>
        <item>เต้น</item>
        <item>ด่าสมพร</item>
        <item>เล่นเกม</item>
        <item>แข่งรถ</item>
    </string-array>
    <string-array name="pasa_item">
        <item>English</item>
        <item>ไทย</item>
        <item>汉语 官话</item>
        <item>Español</item>
        <item>العربية</item>
        <item>हिन्दी</item>
        <item>Português</item>
        <item>বাংলা</item>
        <item>Русский язык</item>
        <item>日本語</item>
        <item>Deutsch</item>
        <item>Basa Jawa</item>
        <item>汉语, 吴方言</item>
        <item>తెలుగు</item>
        <item>मराठी</item>
        <item>Tiếng Việt</item>
        <item>한국어, 조선말</item>
        <item>Français</item>
        <item>Italiano</item>
        <item>ਪੰਜਾਬੀ, پنجابی</item>
        <item>اُردو</item>
        <item>汉语, 粵語, 廣東語</item>
        <item>हTürkçe</item>
        <item>汉语, 閩方言</item>
        <item>ગુજરાતી</item>
        <item>język polski</item>
        <item>украї́нська мо́ва</item>
        <item>فارسی</item>
        <item>മലയാളം</item>
        <item>ಕನ್ನಡ </item>
        <item>ଓଡ଼ିଆ</item>
        <item>မြန်မာ</item>
    </string-array>
</resources>