<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_round"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
                android:padding="15dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:id="@+id/message_QA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textColor="#000000"
                    android:text="Message"/>
                <RadioGroup
                    android:id="@+id/radioGroup_QA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton_QA1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Answer1"/>
                    <RadioButton
                        android:id="@+id/radioButton_QA2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Answer2"/>
                </RadioGroup>
                <TextView
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:id="@+id/message_QAweight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17dp"
                    android:textColor="#000000"
                    android:text="@string/QA_improtant"/>
                <RadioGroup
                    android:id="@+id/radioGroup_QAWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton_QAWeight1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/QA_choice1"/>
                    <RadioButton
                        android:id="@+id/radioButton_QAWeight2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/QA_choice2"/>
                    <RadioButton
                        android:id="@+id/radioButton_QAWeight3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/QA_choice3"/>
                    <RadioButton
                        android:id="@+id/radioButton_QAWeight4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/QA_choice4"/>
                    <RadioButton
                        android:id="@+id/radioButton_QAWeight5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/QA_choice5"/>
                </RadioGroup>
        <LinearLayout
            android:padding="3dp"
            android:gravity="end"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/c3"
                android:id="@+id/QA_dismiss"
                android:padding="10dp"
                android:text="@string/dismiss_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/c3"
                android:id="@+id/QA_confirm"
                android:padding="10dp"
                android:text="@string/next_QA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/page_QA"
                android:textSize="10dp"
                android:hint="0 / 3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
            </LinearLayout>

</RelativeLayout>