<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    >
    <ImageView
        android:id="@+id/close"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@drawable/ic_close2"
        android:layout_margin="20dp"
        android:layout_gravity="right"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    >
    <ImageView
        android:visibility="gone"
        android:id="@+id/image_vip"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_hand"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hi"
        android:textColor="@color/text_black_gray"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/text_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/Send_a_message_to"

        android:textColor="@color/text_black_gray"
        android:textSize="16dp"
        android:includeFontPadding="false"
        />
    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:layout_gravity="center"
        android:textColor="@color/cpb_white"

        />
</LinearLayout>
</androidx.cardview.widget.CardView>