<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Register.VerifyActivity">
    <LinearLayout
        android:id="@+id/linearLayout23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_tools"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_white"
            android:theme="@style/AppTheme2"
            app:subtitleTextColor="@color/c2"
            app:titleTextColor="@color/c2">

        </androidx.appcompat.widget.Toolbar>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:max="2"
            android:progress="2"
            android:progressTint="@color/c3" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout23">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/otp"
            android:textColor="@color/text_black_gray"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/commend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/Application_has_sent"
            android:textColor="@color/text_gray"
            android:textSize="14dp" />

        <com.chaos.view.PinView
            android:id="@+id/secondPinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:inputType="number"
            android:textColor="@color/c2"
            android:textSize="20dp"
            app:itemCount="6"
            app:itemRadius="10dp"
            app:lineColor="@color/text_black_gray"
            app:lineWidth="1dp"
            app:viewType="rectangle" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/next_button"
            android:textColor="@color/cpb_white"
            android:textSize="16dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>